test/parser.d/invalid/match2.surc.bad
match2(dox: Integer): Integer = match 4
		7 -> 7
